# small_fileread_service

./: .env  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  service.py  wix_api.py  wix_schemas.py
jinja_process/: base.py  cards_router.py  examples_router.py  utils.py
jinja_process/example_templates/: equation_example.html  example_type_1.html  example_type_2.html
jinja_process/templates/: card_type_1.htm  card_type_2.htm  create_card_list.htm  create_eq_card.htm  equation_template.htm
